Remove handling of SIGSEGV/SIGFPE/SIGILL etc.

Modern operating systems have "crash catching" functionality; for
example, systemd comes with "systemd-coredump" which collects cores
automatically.

Attempting to handle these kinds of fatal signals internally is now
much worse, because the original source of the problem will be masked.
systemd won't collect a core file that would include a backtrace, for
example.

Also, with these removed, we can move forward porting to
g_unix_signal_add().

https://bugzilla.gnome.org/show_bug.cgi?id=676181